--- a/package.json
+++ b/package.json
@@ -9,13 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/three": "^10.0.1",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.3.0",
+    "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.23.11",
+    "hamburger-react": "^2.5.2",
+    "lucide-react": "^0.534.0",
+    "next": "15.4.4",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.4"
+    "react-icons": "^5.5.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "three": "^0.178.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^3.4.17"
   }
 }
