--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
+    "recharts": "^3.1.2",
     "slick-carousel": "^1.8.1",
     "three": "^0.178.0"
   },
