--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@react-spring/three": "^10.0.1",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.11",
     "hamburger-react": "^2.5.2",
     "lucide-react": "^0.534.0",
+    "motion": "^12.23.12",
     "next": "15.4.4",
     "postcss": "^8.5.6",
     "react": "19.1.0",
@@ -23,7 +28,9 @@
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
     "recharts": "^3.1.2",
+    "simplex-noise": "^4.0.3",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.178.0"
   },
   "devDependencies": {
